--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <a href=""><i class="fab fa-linkedin"></i></a>
                 </div>
                 <br>
-                <a  href="images/K.Ambica-Resume1.pdf" download class="btn btn2"> Download CV</a>
+                <a  href="" download class="btn btn2"> Download CV</a>
             </div>
             <div class="contact-right">
                 <form>
